# Django-postorius

./: .git-blame-ignore-revs  .gitlab-ci.yml  .readthedocs.yml  README.rst  copybump.py  pyproject.toml  requirements-docs.txt  setup.py  template.py  tox.ini  update-po.sh
example_project/: manage.py  settings.py  test_settings.py  urls.py
scripts/: update-po-create-pr.sh  update-po.sh
src/postorius/: __init__.py  apps.py  context_processors.py  middleware.py  models.py  template_list.py  urls.py  utils.py
src/postorius/auth/: decorators.py  utils.py
src/postorius/doc/: conf.py  deployment.rst  news.rst  setup.rst
src/postorius/forms/: domain_forms.py  fields.py  list_forms.py  member_forms.py  system.py  user_forms.py
src/postorius/management/commands/: mmclient.py  reset_passwords.py
src/postorius/migrations/: 0015_auto_20210619_0509.py  0016_auto_20210810_2157.py
src/postorius/templates/postorius/: base.html  index.html  system_information.html
src/postorius/templatetags/: date_helpers.py  membership_helpers.py  nav_helpers.py  postorius_helpers.py
src/postorius/tests/: test_auth_decorators.py  test_domain_forms.py  test_domain_view.py  test_error_pages.py  test_list_forms.py  test_list_view.py  test_member_forms.py  test_migration.py  test_templatetags.py  test_urls.py  test_user_forms.py  test_utils.py  utils.py
src/postorius/tests/mailman_api_tests/: conftest.py  test_anonymous_subscribe.py  test_auth_utils.py  test_bans.py  test_domain_delete.py  (+25 more)
src/postorius/views/: domain.py  generic.py  list.py  rest.py  system.py  template.py  user.py
(+95 files in other folders)
